lab-platform-engineer/spring-smoketest/.tanzu/config/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: spring-smoketest-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: spring-smoketest
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-spring-smoketest
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: spring-smoketest
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
